src/test/deca/etapeB/invalid/decl_init/init_bool_in_float.deca
// Description:
//    Déclaration de variables
//
// Resultats:
//    Line 9 : Incompatible type initialization
//

{
   float a = false;
}
